<resources>

    <string name="action_settings">Settings</string>


    <!--Titles-->
    <string name="app_name">Chuck Challenge</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_launch">Random Joke</string>
    <string name="title_activity_name_replace">Name Replace</string>
    <string name="title_activity_infinite_list">Infinite List</string>

    <!--Launch Activity    -->
    <string name="launch_button_random_joke">Random Joke</string>
    <string name="launch_button_name_replace">Name Replace</string>
    <string name="launch_button_infinite_list">Infinite List</string>
    <string name="launch_checkbox_explicits">No explicits</string>

    <!--Generic-->
    <string name="generic_dialog_title">Joke number: %1$s</string>
    <string name="generic_title_dialog_error">What the Chuck?!</string>
    <string name="generic_message_dialog_error">Something went wrong</string>

    <!--Name Replace Activity-->
    <string name="name_replace_intro">Enter your first and last name to appear in your very own joke!</string>
    <string name="name_replace_hint_name">Full Name</string>
    <string name="name_replace_error_message_name">Please enter your first and second name.</string>
    <string name="name_replace_error_message_unsplittable_name">Enter enter your our first and second name, separated with a space. </string>
    <string name="name_replace_button">Submit</string>

    <!--Navigation drawer-->
    <string name="drawer_open">Navigation Drawer Open</string>
    <string name="drawer_closed">Navigation Drawer Closed</string>

    <!--Infinite List Activity-->
    <string name="explicit_tag">Explicit</string>
    <string name="nerdy_tag">Nerdy</string>
</resources>
