<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/grid_spacing_double"
    tools:context=".activities.nameReplaceActivity.ReplaceNameFragment"
    tools:showIn="@layout/activity_name_replace"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_layout_name"
        android:layout_marginBottom="@dimen/grid_spacing_double"
        android:layout_marginTop="@dimen/grid_spacing_double"
        android:text="@string/name_replace_intro"
        style="@style/Content.Bold"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/TextAppearance.Error"
        android:layout_above="@+id/submitButton">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_replace_hint_name"
            style="@style/Content"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/grid_spacing_triple"
        android:layout_marginRight="@dimen/grid_spacing_triple"
        android:layout_marginTop="@dimen/grid_spacing"
        style="@style/Button"
        android:layout_centerInParent="true"
        android:text="@string/name_replace_button" />

</RelativeLayout>
